Detailed documentation, README update, Makefile development

--- a/html/md_README.html
+++ b/html/md_README.html
@@ -65,10 +65,15 @@ $(function() {
   <div class="headertitle"><div class="title">epidemic-simulation </div></div>
 </div><!--header-->
 <div class="contents">
-<div class="textblock"><p >Requirements:</p><ul>
-<li>XNA or FNA framework</li>
+<div class="textblock"><h1><a class="anchor" id="autotoc_md1"></a>
+Detailed description</h1>
+<p >The application is C# object-oritented implementation of the epidemic simulation employing make building system. WinForms and XNA (FNA) were used to created graphical user interface. The user can set up different initial parameters of simulation including its lethality, communicability, duration and simulated population. There are three different scenarios enriching the user experience: 1) single community simulation, 2) shopping community simulation and 3) multigroup community simulation. The user is able to observe the spread of the germ in real time as well as follow graphs depicting progress of the disease. At the very end of simulation, the file containg detalied statistics is being generated. The project has been created and developed as university project for the 'Object-Oriented Programming' course. </p>
+<h1><a class="anchor" id="autotoc_md2"></a>
+Requirements:</h1>
+<ul>
 <li>C# implementation - dotnet or mono</li>
-<li>make </li>
+<li>XNA or FNA framework</li>
+<li>make command </li>
 </ul>
 </div></div><!-- contents -->
 </div><!-- PageDoc -->
